feat: created donate page

--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,8 @@ url: https://petrknap.github.io
 
 author:
   name: Petr Knap
-  web: http://petrknap.cz/
+  web: https://petrknap.cz/
+  donate: https://petrknap.github.io/donate.html
   blog: https://petrknap.github.io/notes/
   rss: https://petrknap.github.io/notes/feed/
   linkedin: https://www.linkedin.com/in/pknap
