--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Jekyll configuration
 #
 
-gems: [jekyll-gist]
+plugins: [jekyll-gist]
 markdown: kramdown
 
 kramdown:
@@ -47,7 +47,7 @@ blog:
   title: Petr Knap's Notes
   urls:
     home: /notes/
-    issues: https://github.com/petrknap/trunk/issues
+    issues: https://github.com/petrknap/petrknap.github.io/issues
 
 web:
   menu:
@@ -59,5 +59,4 @@ web:
       url: https://petrknap.cz/
 
 created_on: 2016
-google_analytics_code: UA-88031264-1
 permalink: /notes/:year/:month/:day/:title.html
